// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textbox component should match snapshot 1`] = `
<div>
  <div
    class="css-1yiveqa-InputWrapper"
  >
    <label
      class="css-1xx1j7c-InputWrapper"
      for="test"
    >
      <div
        class="css-1x18leo-Text"
      >
        test
      </div>
    </label>
    <div
      class="css-u4w0n1"
    >
      <input
        class="css-165plsn"
        id="test"
        value=""
      />
      <span
        class="css-1k8g5nq"
      >
        <i
          class="material-icons  css-14lartn-Icon"
        >
          info
        </i>
      </span>
    </div>
    <label
      class="css-1xx1j7c-InputWrapper"
      for="test"
    >
      <div
        class="css-1x18leo-Text"
      >
        test
      </div>
    </label>
  </div>
</div>
`;

exports[`Textbox component should match snapshot when active and fullwidth 1`] = `
<div>
  <div
    class="css-tv7s4a-InputWrapper"
  >
    <label
      class="css-1xx1j7c-InputWrapper"
      for="test"
    >
      <div
        class="css-1x18leo-Text"
      >
        test
      </div>
    </label>
    <div
      class="css-u4w0n1"
    >
      <input
        class="css-1f58qlc"
        id="test"
        value=""
      />
      <span
        class="css-1k8g5nq"
      >
        <i
          class="material-icons  css-14lartn-Icon"
        >
          info
        </i>
      </span>
    </div>
    <label
      class="css-1xx1j7c-InputWrapper"
      for="test"
    >
      <div
        class="css-1x18leo-Text"
      >
        test
      </div>
    </label>
  </div>
</div>
`;
